[package]
name = "testangel-oracle"
version = "0.2.0-rc.1"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for Oracle SQL automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib" ]

[dependencies]
lazy_static = "1.4.0"
oracle = "0.5.7"
testangel-engine = { git = "https://github.com/lilopkins/testangel.git", branch = "next" }
thiserror = "1.0.50"
