[package]
name = "testangel-oracle"
version = "0.3.0-rc.1"
edition = "2021"
authors = [ "Lily Hopkins <lily@hpkns.uk>" ]
description = "TestAngel engine for Oracle SQL automation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = [ "cdylib" ]

[dependencies]
dynamic-plugin = { version = "0.5.0", features = ["client"] }
oracle = "0.6.3"
testangel-engine = { version = "1.0.0", git = "https://github.com/lilopkins/testangel.git", branch = "next" }
thiserror = "2.0"
